# dlio_benchmark

./: .dockerignore  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  TODO.md  argument_parser.py  build_dlio2.sh  daos_pytorch.md  dev-requirements.txt  dlio_benchmark.py  environment-ppc.yaml  exec.sh  launch_dlio.sh  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run_benchmark.sh  run_dlio.sh  run_dlio2.sh  run_dlio_pt.sh  run_dlio_tf.sh  setup.cfg  setup.py  start_container.sh  start_dlio.sh
.github/: CODEOWNERS
.github/workflows/: cd.yml  ci.yml  docker.yml  fast-ci.yml  integration.yml  jekyll-gh-pages.yml  python-package-conda.yml
configs/: bert.yaml  config.yaml  cosmoflow.yaml  default.yaml  resnet50.yaml  unet3d.yaml
configs/workload/: bert.yaml  bert_test.yaml  cosmoflow.yaml  default.yaml  dlrm.yaml  resnet50.yaml  unet3d.yaml  unet3d_test.yaml
dlio_benchmark/: benchmark.py  main.py  postprocessor.py
dlio_benchmark/auto_config/: __init__.py  cli.py  compare.py  confidence.py  extractor.py  generator.py  instrument.py  parser.py
dlio_benchmark/checkpointing/: base_checkpointing.py  checkpointing_factory.py  pytorch_adls_checkpointing.py  pytorch_checkpointing.py  pytorch_daos_checkpointing.py  pytorch_msc_checkpointing.py  pytorch_obj_store_checkpointing.py  pytorch_s3_checkpointing.py  tf_checkpointing.py
dlio_benchmark/common/: constants.py  enumerations.py  error_code.py
dlio_benchmark/computation/: asynchronous_computation.py  computation_factory.py  computation_handler.py  no_computation.py  synchronous_computation.py
dlio_benchmark/configs/: config.yaml
dlio_benchmark/data_generator/: csv_generator.py  data_generator.py  generator_factory.py  hdf5_generator.py  indexed_binary_generator.py  indexed_binary_msc_generator.py  jpeg_generator.py  npy_generator.py  npy_generator_s3.py  npz_generator.py  npz_generator_s3.py  npz_s3_generator.py  parquet_generator.py  png_generator.py  synthetic_generator.py  tf_generator.py
dlio_benchmark/data_loader/: base_data_loader.py  dali_data_loader.py  daos_torch_data_loader.py  data_loader_factory.py  dlio_dali_data_loader.py  dlio_tf_data_loader.py  dlio_torch_data_loader.py  native_dali_data_loader.py  native_tf_data_loader.py  native_torch_data_loader.py  synthetic_data_loader.py  tf_data_loader.py  torch_data_loader.py
dlio_benchmark/framework/: framework.py  framework_factory.py  tf_framework.py  torch_framework.py
dlio_benchmark/model/: __init__.py  layer.py  loss_fn.py  model.py  model_factory.py  tf_layer.py  torch_layer.py
dlio_benchmark/model_factory/: __init__.py  layer.py  model.py  model_factory.py  tf_layer.py  torch_layer.py
dlio_benchmark/plugins/: README.md
dlio_benchmark/profiler/: darshan_profiler.py  io_profiler.py  iostat_profiler.py  no_profiler.py  profiler_factory.py  tf_profiler.py
dlio_benchmark/reader/: __init__.py  _local_fs_iterable_mixin.py  _s3_iterable_mixin.py  csv_reader.py  dali_base_reader.py  dali_image_reader.py  dali_npy_reader.py  dali_npz_reader.py  dali_tfrecord_reader.py  dlio_base_reader.py  dlio_csv_reader.py  dlio_hdf5_reader.py  dlio_jpeg_reader.py  dlio_npz_reader.py  dlio_png_reader.py  dlio_tfrecord_reader.py  hdf5_reader.py  image_reader.py  image_reader_iterable.py  image_reader_s3_iterable.py  indexed_binary_mmap_reader.py  (+29 more)
docs/: Arrow-Parquet_Data-Loader.md  ArrowIPC_vs_Parquet_26-04-18.md  Batch-API-Design-Analysis.md  Cache-Flush-ToDo.md  DLIO-Object-Storage_Analysis.md  DLIO_IO_Issues-Proposal_2026-03-28.md  DLIO_Issues_Resolution_26-04-18.md  DLRM-Parquet-S3-Optimization-Plan.md  DLRM-Parquet-S3-Throughput-Analysis.md  DLRM-Python-Per-Sample-Architecture-Fatal-Flaws.md  Data-Gen_Enhance.md  Makefile  PageCache_Drop_Between_Epochs_26-04-18.md  Parquet-S3-DataLoader_Updates.md  Parquet_Status_Email.md  Parquet_update_0-9-100.md  dgen_generation_benchmark_results.md  skip-listing.md
scripts/: app_config.sh  candel.sh  computation_thread_test.sh  cosmic.sh  cosmoflow.sh  ffn.sh  frnn.sh  generate.sh  imagenet.sh  overlap_test.sh  read_thread_test.sh  run_script.sh  run_script_cmp.sh  setup_tf2.3.sh  theta.sh  transfer_size_test.sh
src/: dlio_benchmark.py  dlio_postprocessor.py
tests/: bench_dgen.py  bench_parquet_gen.py  conftest.py  dlio_adls_benchmark_test.py  dlio_ai_logging_test.py  dlio_aistore_benchmark_test.py  dlio_auto_config_test.py  dlio_benchmark_test.py  dlio_dataset_dimension_test.py  dlio_msc_benchmark_test.py  dlio_postprocessor_test.py  dlio_s3_benchmark_test.py  dlio_sample_shuffle_test.py  dlrm-s3dlio-file.yaml  dlrm-s3dlio-s3.yaml  run_fast_ci.sh  run_integration_tests.sh  test_dlio_profiler.py  test_dlio_sampler.py  test_drop_caches_timeout.py  test_fast_ci.py  test_flat_layout_oom_fix.py  test_issue_regressions.py  test_obj_store_preflight.py  test_odirect_preflight.py  test_s3dlio_object_store.py  test_s3dlio_parquet_loader.py  test_skip_listing_config.py  unit_model_factory.py  utils.py
(+189 files in other folders)
