[metadata]
name = dlio
version = 0.0.1
author = Hariharan Devarajan
author_email = mani.hariharan@gmail.com
description = Scientific Deep Learning I/O Benchmark.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hariharan-devarajan/dlio_benchmark
project_urls =
    Bug Tracker = https://github.com/hariharan-devarajan/dlio_benchmark/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
	horovod[tensorflow]>=0.19.5
        tensorflow>=2.2.0
        numpy>=1.19.1
        h5py~=2.10.0
        pandas>=1.1.3
        mpi4py>=3.1.3
[options.packages.find]
where = src
