[metadata]
name = dlio
version = 1.0
description = Deep Learning I/O Benchmark.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/argonne-lcf/dlio_benchmark
project_urls =
    Bug Tracker = https://github.com/argonne-lcf/dlio_benchmark/issues
classifiers =
    Programming Language :: Python :: 3
    License :: Apache 2.0
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    dlio_benchmark = dlio_benchmark:main
